--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-<script src="js/addchild_form.js"></script>
+<script charset="utf-8" src="js/addchild_initialize.js"></script>
 <script>
 const addChild = document.getElementById('addchildsheet');
 const submit = document.getElementById('submit');
@@ -49,6 +49,12 @@ addChild.onchange = () => {
 		submit.disabled = true;
 	}
 }
+
+document.getElementById('submit').addEventListener('click', () => {
+	if(window.confirm('登録内容を更新しますか？')){
+		return true;
+	}else event.preventDefault();
+}, false);
 
 document.getElementById('cancel').addEventListener('click', () => {
 	if(window.confirm('登録を中止しますか？')){
